# win-spotlight

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
scripts/: release.ps1  release.sh
src/: main.ts  main.tsx  settings.ts  settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser_tabs.rs  commands.rs  file_indexer.rs  file_search.rs  icon_cache.rs  icons.rs  indexer.rs  lib.rs  main.rs  network.rs  recorder.rs  running.rs  search.rs  settings.rs  steam.rs  system_info.rs  usage.rs  window.rs
src/components/: App.tsx  BigWidgets.tsx  FocusRing.tsx  FooterBar.tsx  HintGroup.tsx  InstantAnswerGroup.tsx  LauncherInput.tsx  Onboarding.tsx  PinHandle.tsx  ResultIcon.tsx  ResultItem.tsx  ResultList.tsx  ResultsList.tsx  SearchBar.tsx  SearchFooter.tsx  SettingsApp.tsx  TabSwitcher.tsx  WidgetArea.tsx  Widgets.tsx  footer-bar.ts  results-list.ts  search-bar.ts
src/layouts/: WidgetArea.tsx
src/lib/: answer-accents.ts  calc.test.ts  calc.ts  colors.ts  commands.ts  currency.ts  dates.ts  devtools.ts  instant-answer.ts  launcher-lifecycle.ts  locale.ts  percentage.test.ts  percentage.ts  sync-helpers.ts  tauri-focus.ts  theme.ts  timezone.ts  units.test.ts  units.ts  use-refresh-on-focus.ts  use-tick.ts  weather-codes.ts  widget-colors.ts
src/services/: app-info.ts  keyboard.ts  pin.ts  (+5 more)
(+44 files in other folders)
