[package]
name = "win-spotlight"
version = "0.1.0"
edition = "2021"
description = "A Raycast-style launcher for Windows"

[lib]
name = "win_spotlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "win-spotlight"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3"
raw-window-handle = "0.6"
windows = { version = "0.61", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
