[package]
name = "win-spotlight"
version = "0.2.4"
edition = "2021"
description = "A Raycast-style launcher for Windows"

[lib]
name = "win_spotlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "win-spotlight"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3"
jwalk = "0.8"
bincode = "1"
raw-window-handle = "0.6"
winreg = "0.55"
windows = { version = "0.61", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi"] }
tauri-plugin-updater = "2.10.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
